# lua-cmake

./: .gitignore  CMakeLists.txt  main.c
Test/: main.lua
Test/Data/: main.lua
